2007-11-22  Frank Warmerdam  <warmerdam@pobox.com>

	* tif_dirwrite.c: Try to avoid writing out a full readbuffer of tile
	data when writing the directory just because we have BEENWRITING at
	some point in the past.  This was causing odd junk to be written out
	in a tile of data when a single tile had an interleaving of reading 
	and writing with reading last.  (highlighted by gdal 
	autotest/gcore/tif_write.py test 7. 

	* tif_predict.c: use working buffer in PredictorEncodeTile to avoid
	modifying callers buffer. 
	http://trac.osgeo.org/gdal/ticket/1965

	* tif_predict.c/h, tif_lzw.c, tif_zip.c: Improvements so that 
	predictor based encoding and decoding works in read-write update
	mode properly. 
	http://trac.osgeo.org/gdal/ticket/1948

2007-10-05  Frank Warmerdam  <warmerdam@pobox.com>

	* tools/tiff2pdf.c: Fixed setting of alpha value per report on list.

2007-09-13  Frank Warmerdam  <warmerdam@pobox.com>

	* tif_dirinfo.c:  _TIFFMergeFields() now only merges in field
	definitions that are missing.  Existing definitions are silently
	ignored.  (Bug #1585)

2007-07-18  Andrey Kiselev  <dron@ak4719.spb.edu>

	* libtiff/{Makefile.am, Makefile.v}: Do not distribute tiffconf.h, 
	remove tif_config.h/tiffconf.h during cleaning. As per bug

	http://bugzilla.remotesensing.org/show_bug.cgi?id=1573

2007-07-13  Andrey Kiselev  <dron@ak4719.spb.edu>

	* libtiff 3.9.0beta released.

2007-07-12  Andrey Kiselev  <dron@ak4719.spb.edu>

	* tools/tiff2pdf.c: Added missed extern optind as per bug

	http://bugzilla.remotesensing.org/show_bug.cgi?id=1567

2007-07-03  Andrey Kiselev  <dron@ak4719.spb.edu>

	* tools/tiff2ps.c:  Added support 16-bit images as per bug
	
	http://bugzilla.remotesensing.org/show_bug.cgi?id=1566

	Patch from William Bader.

	* tools/tiff2pdf.c: Fix for TIFFTAG_JPEGTABLES tag fetching and
	significant upgrade of the whole utility as per bug
	
	http://bugzilla.remotesensing.org/show_bug.cgi?id=1560
